--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "project",
   "version": "1.0.0",
   "main": "index.js",
+  "type":"module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
+
   },
   "keywords": [
     "javascript",
@@ -11,5 +13,8 @@
   ],
   "author": "DK",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+  "nodemon": "^3.1.0"
+}
 }
