--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "project",
   "version": "1.0.0",
   "main": "index.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js"
-
   },
   "keywords": [
     "javascript",
@@ -16,6 +15,12 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-  "nodemon": "^3.1.0"
-}
+    "nodemon": "^3.1.0"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
+    "express": "^5.1.0",
+    "mongoose": "^8.18.0"
+  }
 }
