--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
+    "cursor": "^0.1.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "filesystem": "^1.0.1",
